--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "login-portal"
+    }
+  },
+  "defaultProject": "login-portal",
+  "cli": {
+    "analytics": "3bbc711d-01df-408c-935b-a9b02d5fe7b7"
+  }
 }
