--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.5",
-    "@angular/common": "^10.1.5",
-    "@angular/compiler": "^10.1.5",
-    "@angular/core": "^10.1.5",
-    "@angular/forms": "^10.1.5",
-    "@angular/platform-browser": "^10.1.5",
-    "@angular/platform-browser-dynamic": "^10.1.5",
-    "@angular/router": "^10.1.5",
+    "@angular/animations": "^10.2.4",
+    "@angular/common": "^10.2.4",
+    "@angular/compiler": "^10.2.4",
+    "@angular/core": "^10.2.4",
+    "@angular/forms": "^10.2.4",
+    "@angular/platform-browser": "^10.2.4",
+    "@angular/platform-browser-dynamic": "^10.2.4",
+    "@angular/router": "^10.2.4",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "rxjs": "~6.6.3",
-    "tslib": "^2.0.0",
+    "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.6",
-    "@angular/cli": "^10.1.6",
-    "@angular/compiler-cli": "^10.1.5",
-    "@angular/language-service": "^10.1.5",
-    "@types/jasmine": "^3.5.12",
+    "@angular-devkit/build-angular": "^0.1001.7",
+    "@angular/cli": "^10.2.1",
+    "@angular/compiler-cli": "^10.2.4",
+    "@angular/language-service": "^10.2.4",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.54",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^12.19.14",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -44,6 +44,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.3"
+    "typescript": "^4.0.5"
   }
 }
