--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/forms": "^11.0.9",
     "@angular/platform-browser": "^11.0.9",
     "@angular/platform-browser-dynamic": "^11.0.9",
+    "@angular/language-service": "^11.0.9",
     "@angular/router": "^11.0.9",
     "@ngx-translate/core": "^13.0.0",
     "rxjs": "~6.6.3",
@@ -24,10 +25,9 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular-devkit/build-angular": "~0.1100.7",
     "@angular/cli": "^11.0.7",
     "@angular/compiler-cli": "^11.0.9",
-    "@angular/language-service": "^11.0.9",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.14",
@@ -42,6 +42,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.1.5"
+    "typescript": "~4.1.5"
   }
 }
